tests/init/neg/inner-first.check
-- Error: tests/init/neg/inner-first.scala:3:12 ------------------------------------------------------------------------
3 |    println(this)           // error
  |            ^^^^
  |            Cannot prove the method argument is hot. Only hot values are safe to leak.
  |            Found = ThisRef[class B].
  |            Non initialized field(s): value n. Calling trace:
  |            -> class B:	[ inner-first.scala:2 ]
  |               ^
  |            -> println(this)           // error	[ inner-first.scala:3 ]
  |                       ^^^^
